kubernetes/apps/kopiur-system/kopiur/repository/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopiur
spec:
  hostnames:
    - kopiur.rodent.cc
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: nas-kopia-ui
          namespace: kopiur-system
          port: 51515
